# sightseeing-muenster

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  app.py  model.py  pyproject.toml  requirements.txt  run_dev.sh  scraper.py  scraping.sh  setup.sh
.github/configs/: dependency-review-config.yaml
.github/workflows/: code-style.yaml  codeql.yaml  dependency-review.yaml
datasets/: labels_test.npy  labels_train.npy
models/: efficientnet.py
notebooks/: model.ipynb  preprocessing.ipynb
resources/: labels.json  tourist_information.json
sight_seeing_ms/: app.py
sight_seeing_ms/data/: get_info.py  response_models.py
sight_seeing_ms/models/: efficientnetv2s.py
sight_seeing_ms/utils/: caching_functions.py  constants.py  logger.py  translation.py
sightseeing_ms/: app.py
sightseeing_ms/data/: get_info.py  response_models.py
sightseeing_ms/models/: efficientnetv2s.py
sightseeing_ms/utils/: caching_functions.py  constants.py  translation.py
src/: app.py
src/core/: constants.py  data_portal.py  models.py
src/data/: get_info.py  response_models.py  scraping.sh
src/ml_models/: efficientnetv2s.py
src/models/: efficientnetv2s.py  model.py
src/resources/: functions.py  sight_ids.json
src/utils/: caching_functions.py  constants.py  functions.py  logger.py  translation.py
